feat(close-dialog)

--- a/sync-storage/popup.html
+++ b/sync-storage/popup.html
@@ -58,6 +58,7 @@
       <button class="export">导出</button>
       <button class="import">导入</button>
       <button class="reset">重置</button>
+      <button class="close">关闭弹窗</button>
     </div>
   </div>
   <script src="popup.js"></script>
