--- a/sync-storage/popup.html
+++ b/sync-storage/popup.html
@@ -49,10 +49,10 @@
   <div class="card">
     <div class="card-header"></div>
     <div class="card-body">
-      <p id="err"></p>
-      <p class="tips">1. 打开测试站点点击导出</p>
-      <p class="tips">2. 打开本地站点点击导入</p>
-      <p class="tips">*导入的缓存将对原有缓存进行覆盖</p>
+      <div>
+        <a href="chrome-extension://fmdfpoiohnldjkmpnedndhfjmmimlbnb/tabPage.html" target="_blank">常用文档</a>
+        设为标签页 <input type="checkbox" class="checkbox">
+      </div>
     </div>
     <div class="card-footer">
       <button class="export">导出</button>
